# dontstoptheclock

./: Cargo.toml  Makefile  README.md
src/: main.rs  models.rs  tests.rs
templates/: index.html.tera
templates/static/: script.js  style.css
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/static/: index.scss
